<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.msu.perrym23.project2.EndGameActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/playerWin"
        android:id="@+id/winnerLabel"
        android:textStyle="bold"
        android:textColor="#010101"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/winnerTag"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/winnerLabel"
        android:layout_above="@+id/imageView2"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/winner_name"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/splash"
        android:contentDescription="@string/steampunked_logo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newGame"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:onClick="onNewGame"
        android:layout_alignParentBottom="true"
        android:padding="20dp" />

</RelativeLayout>
