<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.msu.perrym23.project2.GameActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard"
        android:id="@+id/discardButton"
        android:onClick="onDiscard"
        android:adjustViewBounds="true"
        android:enabled="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <Button
        android:layout_height="wrap_content"
        android:text="@string/install"
        android:id="@+id/installButton"
        android:clickable="true"
        android:enabled="true"
        android:nestedScrollingEnabled="false"
        android:onClick="onInstall"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/discardButton"
        android:layout_alignRight="@+id/discardButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/currentPlayer"
        android:text="@string/your_turn"
        android:textAlignment="center"
        android:layout_below="@+id/surrender"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/gameView"
        android:layout_toLeftOf="@+id/openValveButton"
        android:layout_toRightOf="@+id/discardButton"
        android:elegantTextHeight="false"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surrender"
        android:id="@+id/surrender"
        android:onClick="onSurrender"
        android:adjustViewBounds="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:enabled="true"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openValve"
        android:id="@+id/openValveButton"
        android:onClick="onOpenValve"
        android:adjustViewBounds="true"
        android:enabled="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/surrender" />

    <edu.msu.perrym23.project2.GameView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gameView"
        android:layout_below="@+id/installButton"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
