<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            fontPath="fonts/santa.ttf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/username_input"
            />

        <EditText
            fontPath="fonts/santa.ttf"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:maxLength="18"
            android:imeOptions="actionDone"
            android:hint="@string/username" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            fontPath="fonts/santa.ttf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/password"
            />

        <EditText
            fontPath="fonts/santa.ttf"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:maxLength="12"
            android:imeOptions="actionDone"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>

</LinearLayout>