<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    tools:context="edu.msu.perrym23.project2.LoginUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_margin="16dp"
            fontPath="fonts/christmas.ttf"
            android:tint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="50sp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/steampunked" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/splash" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal|center_vertical">

        <Button
            fontPath="fonts/christmas.ttf"
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/login"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/colorAccent" />

        <Button
            fontPath="fonts/christmas.ttf"
            android:id="@+id/new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/new_user"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/colorAccent" />

        <Button
            fontPath="fonts/christmas.ttf"
            android:id="@+id/play_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/play_now"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_margin="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>